crates/hoppy-cli/tests/e2e/snapshots/e2e__cli_stream__stream_collection_create_json.snap
---
source: tests/e2e/cli_stream.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "VideoLibraryId": 10001,
  "Guid": "col-guid-new1",
  "Name": "New Collection",
  "VideoCount": 0,
  "TotalSize": 0,
  "PreviewVideoIds": null,
  "PreviewImageUrls": []
}
