crates/hoppy-cli/tests/e2e/snapshots/e2e__cli_stream__stream_library_list_table.snap
---
source: tests/e2e/cli_stream.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+-------+-----------------+--------+-----------+----------------------+
| ID    | Name            | Videos | Storage   | Created              |
+-------+-----------------+--------+-----------+----------------------+
| 10001 | main-library    | 42     | 536870912 | 2024-01-01T00:00:00Z |
+-------+-----------------+--------+-----------+----------------------+
| 10002 | archive-library | 5      | 104857600 | 2024-03-15T00:00:00Z |
+-------+-----------------+--------+-----------+----------------------+
