crates/hoppy-cli/tests/e2e/snapshots/e2e__cli_stream__stream_video_smart_generate_json.snap
---
source: tests/e2e/cli_stream.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Success": true,
  "Message": "Smart action queued",
  "StatusCode": 202
}
